[package]
name = "lsig"
version = "0.1.0"
edition = "2021"
license = "MIT"
description= "This crate provides functionalities for generating private and public key pairs and signing messages using those keys."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
sha256= "1.5.0"
num-bigint= "0.4.4"
sha2 = "0.9"
hex = "0.4.3"
to-binary = "=0.4.0"
