[package]
name = "lsig"
version = "0.1.1"
edition = "2021"
license = "MIT"
description= "This crate provides functionalities for generating private and public key pairs and signing messages using those keys."
repository= "https://github.com/amschel99/lsig"
readme= "Readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
sha256= "1.5.0"
sha2 = "0.9"
hex = "0.4.3"

